--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,14 @@
 plugins {
     id 'java'
     id 'com.github.johnrengelman.shadow' version '6.1.0'
+    id 'maven'
 }
 
 group 'me.sunstorm'
 version '1.0.1-SNAPSHOT'
+
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
     mavenCentral()
@@ -23,3 +27,34 @@ shadowJar {
 
 jar.enabled = false
 assemble.dependsOn(shadowJar)
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    //classifier = 'sources'
+    classifier('sources')
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    //classifier = 'javadoc'
+    classifier('javadoc')
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+}
+
+install {
+    repositories.mavenInstaller {
+        pom.project {
+            licenses {
+                license {
+                    name 'GNU General Public License 3.0'
+                    url 'https://www.gnu.org/licenses/gpl-3.0.txt'
+                    distribution 'repo'
+                }
+            }
+        }
+    }
+}
