depend install on shadowJar task

--- a/build.gradle
+++ b/build.gradle
@@ -29,13 +29,11 @@ jar.enabled = false
 assemble.dependsOn(shadowJar)
 
 task sourcesJar(type: Jar, dependsOn: classes) {
-    //classifier = 'sources'
     classifier('sources')
     from sourceSets.main.allSource
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
-    //classifier = 'javadoc'
     classifier('javadoc')
     from javadoc.destinationDir
 }
@@ -58,3 +56,4 @@ install {
         }
     }
 }
+install.dependsOn(shadowJar)
